[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Sprites/Ninja/wizard_1/wizard_idle_001.png" type="Texture" id=1]
[ext_resource path="res://Resources/Fonts/cloudy_dialog_game_over_heading.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resources/UI Elements/Buttons/BeforeClick/short_arrow_right.png" type="Texture" id=3]
[ext_resource path="res://Scripts/PlayScene/GameCompletedScene.gd" type="Script" id=4]
[ext_resource path="res://Resources/Sprites/Sounds/normal_button_click.wav" type="AudioStream" id=5]
[ext_resource path="res://Resources/Sprites/Sounds/background_audio_menu.wav" type="AudioStream" id=6]
[ext_resource path="res://Resources/UI Elements/Buttons/Clicked/short_arrow_right.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "next"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 794.788, 388.909 ), Vector2( 812.866, 388.909 ) ]
}

[node name="Node2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.764706 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.158
anchor_top = 0.5
anchor_right = 0.158
anchor_bottom = 0.5
margin_left = -160.231
margin_top = -299.158
margin_right = -131.231
margin_bottom = -275.158
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wizard" type="Sprite" parent="Control"]
position = Vector2( 221.987, 244.529 )
scale = Vector2( 0.931722, 1 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.275
anchor_top = 0.357
anchor_right = 0.952
anchor_bottom = 0.61
margin_left = 0.399994
margin_top = -0.200012
margin_right = 0.151978
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 2 )
bbcode_text = "This is some sample text to see if everything is coming out as we expect"
text = "This is some sample text to see if everything is coming out as we expect"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="."]
anchor_left = 0.84
anchor_top = 0.708
anchor_right = 0.84
anchor_bottom = 0.708
margin_left = -47.294
margin_top = -35.891
margin_right = 268.708
margin_bottom = 204.11
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="NextButton"]
autoplay = "next"
anims/next = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="NormalButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="button_up" from="NextButton" to="." method="_on_NextButton_button_up"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
